cabal-version:  3.0


name:           lambda-repl
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/ambroslins/lambda-repl#readme>
homepage:       https://github.com/ambroslins/lambda-repl#readme
bug-reports:    https://github.com/ambroslins/lambda-repl/issues
author:         Ambros Lins
maintainer:     ambros.lins@gmail.com
copyright:      2020 Ambros Lins
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
  README.md
  ChangeLog.md

source-repository head
  type: git
  location: https://github.com/ambroslins/lambda-repl

library
  exposed-modules:
    Expr
    Parser
    Repl
  hs-source-dirs:
    src
  build-depends:
    base >=4.7 && <5
  default-language: Haskell2010

executable lambda-repl-exe
  main-is: Main.hs
  hs-source-dirs:
    app
  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
    ,  base >=4.7 && <5
    , lambda-repl
  default-language: Haskell2010

test-suite lambda-repl-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
    test
  ghc-options:
    -Wall
    -Wno-orphans
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
    , base >=4.7 && <5
    , lambda-repl
    , hspec
    , QuickCheck
  default-language: Haskell2010
